--- a/src/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics/packages.config
+++ b/src/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr4.Runtime" version="4.3.0" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="portable45-net45+win8" />
@@ -7,6 +8,7 @@
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="portable45-net45+win8" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="portable45-net45+win8" />
   <package id="NuGet.CommandLine" version="2.8.5" targetFramework="portable45-net45+win8" />
+  <package id="PLSQL.Parser" version="1.1.3" targetFramework="portable45-net45+win8" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="portable45-net45+win8" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="portable45-net45+win8" />
 </packages>
