--- a/src/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics.csproj
+++ b/src/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Analyzers\ValidPlSqlAnalyzer.cs" />
     <Compile Include="Analyzers\ReturnObjectMismatchAnalyzer.cs" />
     <Compile Include="Analyzers\MissingParemetersAnalyzer.cs" />
     <Compile Include="Analyzers\MissingParamsPropertyAnalyzer.cs" />
@@ -70,6 +71,10 @@
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Antlr4.Runtime.portable-net45, Version=4.3.0.0, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Antlr4.Runtime.4.3.0\lib\portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1\Antlr4.Runtime.portable-net45.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeAnalysis, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.CodeAnalysis.Common.1.0.0\lib\portable-net45+win8\Microsoft.CodeAnalysis.dll</HintPath>
       <Private>False</Private>
@@ -85,6 +90,9 @@
     <Reference Include="Microsoft.CodeAnalysis.Workspaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.CodeAnalysis.Workspaces.Common.1.0.0\lib\portable-net45+win8\Microsoft.CodeAnalysis.Workspaces.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="PLSQL.Parser">
+      <HintPath>..\..\packages\PLSQL.Parser.1.1.3\netcore45\lib\PLSQL.Parser.dll</HintPath>
     </Reference>
     <Reference Include="System.Collections.Immutable, Version=1.1.36.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Collections.Immutable.1.1.36\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
