--- a/src/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics.csproj
+++ b/src/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics/DapperDiagnostics.csproj
@@ -91,8 +91,9 @@
       <HintPath>..\..\packages\Microsoft.CodeAnalysis.Workspaces.Common.1.0.0\lib\portable-net45+win8\Microsoft.CodeAnalysis.Workspaces.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="PLSQL.Parser">
-      <HintPath>..\..\packages\PLSQL.Parser.1.1.3\netcore45\lib\PLSQL.Parser.dll</HintPath>
+    <Reference Include="PLSQL.Parser, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\PLSQL.Parser.2.0.4\lib\portable45-net45+win8\PLSQL.Parser.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Collections.Immutable, Version=1.1.36.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Collections.Immutable.1.1.36\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
